--- a/Client/Pages/About.razor
+++ b/Client/Pages/About.razor
@@ -5,6 +5,7 @@
         <p>
             This project was created to help represent a fundamental app written
             with Blazor. The shopping theme is used throughout the app.
+            Ok More Stuff!
         </p>
         <br />
         <h2 class="title">Resources</h2>
